[package]
name = "vale-derive"
version = "0.0.0"
authors = ["ThouCheese <luuk.wester@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1", features = ["full", "derive", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

[lib]
proc-macro = true
