[package]
name = "vale-derive"
version = "0.0.0"
authors = ["ThouCheese <luuk.wester@gmail.com>"]
edition = "2018"
description = "Macros for vale"
license = "MIT"
repository = "https://github.com/ThouCheese/vale"
documentation = "https://docs.rs/vale"
keywords = []
readme = "README.md"
categories = ["web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1", features = ["full", "derive", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

[lib]
proc-macro = true
